--- a/contact.html
+++ b/contact.html
@@ -53,9 +53,9 @@
 	            <li class="nav-item">
 	              <a class="nav-link" href="about.html">About Us  </a>
 	            </li>
-	            <li class="nav-item">
+	            <!-- <li class="nav-item">
 	              <a class="nav-link" href="contact.html">Contact Us  </a>
-	            </li>
+	            </li> -->
 							<li class="nav-item">
 	              <a class="nav-link" href="register.php">Register</a>
 	            </li>
